# csv-utils

./: README.md  requirements-dev.txt  setup.cfg
src/csv_utils/: cli.py  concat.py  convert.py  info.py
src/csv_utils/common/: csv_rw.py
